--- a/nicepage.css
+++ b/nicepage.css
@@ -35214,48 +35214,44 @@ a.u-link.u-text-hover-grey-90:hover {
 
 
 .u-footer .u-sheet-1 {
-  min-height: 129px;
-}
-
-.u-footer .u-social-icons-1 {
-  height: 23px;
-  min-height: 16px;
-  width: 122px;
-  min-width: 94px;
-  white-space: nowrap;
-  margin: 9px 0 0 auto;
-}
-
-.u-footer .u-icon-1 {
-  color: rgb(59, 89, 152) !important;
-}
-
-.u-footer .u-icon-2 {
-  color: rgb(85, 172, 238) !important;
-}
-
-.u-footer .u-icon-3 {
-  color: rgb(197, 54, 164) !important;
-}
-
-.u-footer .u-icon-4 {
-  color: rgb(0, 122, 185) !important;
+  min-height: 136px;
 }
 
 .u-footer .u-text-1 {
   width: 631px;
-  margin: -24px auto 0;
+  margin: 8px auto 0;
 }
 
 .u-footer .u-image-1 {
   width: 103px;
   height: 103px;
-  margin: -17px auto 17px 0;
+  margin: -17px auto 0 0;
 }
 
 .u-footer .u-logo-image-1 {
   width: 100%;
   height: 100%;
+}
+
+.u-footer .u-social-icons-1 {
+  height: 54px;
+  min-height: 16px;
+  width: 181px;
+  min-width: 68px;
+  white-space: nowrap;
+  margin: -78px 17px 41px auto;
+}
+
+.u-footer .u-icon-1 {
+  color: rgb(255, 255, 255) !important;
+}
+
+.u-footer .u-icon-2 {
+  color: rgb(29, 161, 242) !important;
+}
+
+.u-footer .u-icon-3 {
+  color: rgb(100, 65, 165) !important;
 }
 @media (max-width: 1199px) {
   .u-footer .u-image-1 {
@@ -35263,19 +35259,24 @@ a.u-link.u-text-hover-grey-90:hover {
     height: 103px;
     margin-top: -17px;
   }
+
+  .u-footer .u-social-icons-1 {
+    width: 181px;
+  }
 }
 
 @media (max-width: 767px) {
-  .u-footer .u-social-icons-1 {
-    margin-top: 60px;
-    margin-right: auto;
-  }
-
   .u-footer .u-text-1 {
-    margin-top: 20px;
+    width: 540px;
+    margin-top: 134px;
     margin-left: 0;
     margin-right: 0;
-    width: 540px;
+  }
+
+  .u-footer .u-social-icons-1 {
+    margin-top: -185px;
+    margin-right: auto;
+    margin-bottom: 60px;
   }
 }
 @media (max-width: 575px) {
